--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -11,7 +11,7 @@
                 <br>
                 <p><strong>Pour quelques heures ou pour une vie, habile, jovial, dynamique, en vieux briscard de la bricole ou de la débrouille, prenez part à ce projet et apportez votre pierre à l&rsquo;édifice !</strong></p>
                 <p>Accessible à tous : Devenez acteur du festival en participant à des missions simples et concrètes (il faut obligatoirement être majeur pour être bénévole sur le festival).</p>
-                <p>Convivial : Seul(e) ou entre ami(e), c&rsquo;est un bon moyen de joindre l&rsquo;utile à l&rsquo;agréable.</p>
+                <p>Convivial : Seul(e) ou entre amis(es), c&rsquo;est un bon moyen de joindre l&rsquo;utile à l&rsquo;agréable.</p>
 
                 <br>
                 <br>
@@ -24,17 +24,17 @@
                 <p><strong><em>Le montage</em></strong></p>
                 <p>Pendant 5 jours, tout le monde s&rsquo;active pour faire prendre vie au festival du lundi 12 au vendredi 16 septembre 15h: montage des scènes, installation de la décoration, montage des bars</p>
                 <p><strong><em>Pendant le festival</em></strong></p>
-                <p>vendredi 16, 16h30 au samedi 17 septembre 2h</p>
+                <p>vendredi 15, 16h30 au samedi 16 septembre 2h</p>
                 <ul>
-                    <li>Bar: vous servez les clients, vous vous occupez des stocks et du réapprovisionnement.</li>
-                    <li>Cashless: vous vendez et créditez les cartes de paiement pour les bars.</li>
-                    <li>Contrôle billet: vous contrôlez la validité des billets à l&rsquo;entrée du site</li>
-                    <li>Traducteur média: vous traduisez les interviews.</li>
-                    <li>Espace restauration: mise en place du buffet, réapprovisionnement des plats, vaisselle, </li>
-                    <li>Accueil artiste: vous prenez en charge l&rsquo;artiste de son arrivée et à son départ.</li>
-                    <li>Green Team: vous sensibilisez le public au tri sélectif, vous gérez les déchets.</li>
-                    <li>Photographe: vous photographiez les artistes, les concerts, les ambiances du festival</li>
-                    <li>Accueil info/ merchandising: vous informez le public, vous accueillez les personnes en situation de handicap, vous vous occupez de la boutique du festival.</li>
+                    <li>Bar : vous servez les clients, vous vous occupez des stocks et du réapprovisionnement.</li>
+                    <li>Cashless : vous vendez et créditez les cartes de paiement pour les bars.</li>
+                    <li>Contrôle billet : vous contrôlez la validité des billets à l&rsquo;entrée du site</li>
+                    <li>Traducteur média : vous traduisez les interviews.</li>
+                    <li>Espace restauration : mise en place du buffet, réapprovisionnement des plats, vaisselle, </li>
+                    <li>Accueil artiste : vous prenez en charge l&rsquo;artiste de son arrivée et à son départ.</li>
+                    <li>Green Team : vous sensibilisez le public au tri sélectif, vous gérez les déchets.</li>
+                    <li>Photographe : vous photographiez les artistes, les concerts, les ambiances du festival</li>
+                    <li>Accueil info/ merchandising : vous informez le public, vous accueillez les personnes en situation de handicap, vous vous occupez de la boutique du festival.</li>
                 </ul>
                 <p><strong><em>Démontage<br />
                         </em></strong></p>
