--- a/src/Hph/View/front/artist.html.twig
+++ b/src/Hph/View/front/artist.html.twig
@@ -66,7 +66,7 @@
                 <a href="{{ artist.facebookUrl }}"><i class="fa fa-facebook-square social-logo" aria-hidden="true"></i></a>
                 <a href="{{ artist.twitterUrl }}"><i class="fa fa-twitter-square social-logo" aria-hidden="true"></i></a>
 
-                <a href="#"><i class="fa fa-spotify social-logo" aria-hidden="true"></i></a>
+                <a href="{{ artist.spotifyUrl }}"><i class="fa fa-spotify social-logo" aria-hidden="true"></i></a>
                 <a href="{{ artist.youtubeUrl }}"><i class="fa fa-youtube-square social-logo" aria-hidden="true"></i></a>
             </div>
         </div>
