--- a/src/Hph/View/front/dimaorl.html.twig
+++ b/src/Hph/View/front/dimaorl.html.twig
@@ -7,7 +7,9 @@
         {%  for sunday in sundays %}
             <div class="col-xs-12 col-xs-offset-0 col-sm-4">
                 <div class="content-div text-justify">
-                    <img src="../../../web/img/sunday/{{ sunday.imgSunday }}" class="img-responsive">
+                    <div class="text-center">
+                        <img src="../../../web/img/sunday/{{ sunday.imgSunday }}" class="img-255">
+                    </div>
                     <h2 class="news-title font-circula">{{ sunday.title }}</h2>
                     <hr class="hr">
                     <p>{{ sunday.content }}</p>
