--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -9,7 +9,7 @@
                 <div class="col-xs-6 col-sm-4">
                     <div class="thumbnail thumbnail-div">
                         <a href="{{ place.url }}">
-                            <img src="/web/img/place/{{ place.imgPlace }}" class="img-responsive">
+                            <img src="/web/img/place/{{ place.imgPlace }}" class="img-255">
                             <h3 class="thumbnail-title font-circula">{{ place.name }}</h3>
                         </a>
                     </div>
@@ -25,7 +25,7 @@
                 <div class="col-xs-6 col-sm-4">
                     <div class="thumbnail thumbnail-div">
                         <a href="{{ showcase.url }}">
-                            <img src="../../../web/img/place/{{ showcase.imgPlace }}" class="img-responsive">
+                            <img src="../../../web/img/place/{{ showcase.imgPlace }}" class="img-255">
                             <h3 class="thumbnail-title font-circula">{{ showcase.name }}</h3>
                         </a>
                     </div>
