--- a/web/css/style.css
+++ b/web/css/style.css
@@ -407,6 +407,7 @@ body {
     color: #004e57;
     border: 2px solid #2baf97;
     box-shadow: 3px 3px 0 #017553;
+    margin-bottom:0;
 
 }
 
@@ -418,7 +419,7 @@ body {
 .planning-locationSmall {
     color: white;
     text-align: center;
-    font-size: 36px;
+    font-size: 28px;
 }
 .planning-collapse {
     background-color: transparent;
@@ -454,6 +455,30 @@ body {
     color: #a54d1e;
     border: 2px solid #ed7a21;
     box-shadow: 3px 3px 0 #ed7a22;
+}
+
+.planning-cancel{
+    padding-top: 3% !important;
+    background-color: rgba(0, 0, 0, 0.5)! important;
+    color: #ed7a21 !important;
+}
+.plan-cancel{
+    color: #ed7a21;
+    font-size:medium;
+    font-weight: 100;
+    margin: 0;
+    }
+.plan-cancel-xs{
+    color: #ed7a21;
+    font-size:28px;
+    font-weight: 100;
+    margin: 0;
+}
+.cancel-hidden {
+    display: none;
+}
+.artist {
+    margin-bottom: 0;
 }
 /*Fin Planning*/
 
