quelques modifs nws.html.twig et prog.html.twig

--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -28,8 +28,8 @@
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Groupes Locaux <span
                         class="caret"></span></button>
             <ul class="dropdown-menu" aria-labelledby="filter-local">
-                <li><a href="?page=programmation&soir=1" class="font-circula">Oui</a></li>
-                <li><a href="?page=programmation&soir=0" class="font-circula">Non</a></li>
+                <li><a href="?page=programmation&lcl=1" class="font-circula">Oui</a></li>
+                <li><a href="?page=programmation&lcl=0" class="font-circula">Non</a></li>
             </ul>
         </div>
     </div>
