--- a/src/Hph/View/front/planning.html.twig
+++ b/src/Hph/View/front/planning.html.twig
@@ -18,6 +18,7 @@
                 <div class="col-md-2 hidden-sm hidden-xs col-lieu">
                     {% for heure, values in progLieu %}
                         <div class=" hidden-sm hidden-xs">
+                            <a href="../../../../index.php?page=artist&id={{ values.artiste.id }}">
                             <div class="planning-show show-blue font-default {% if values.concert.status == 'canceled' %}planning-cancel{%endif%}"><p class="artist">{{ values.artiste.name }}<br/><span class="{% if values.concert.status == 'canceled' %}cancel-hidden{% endif %}">{{ heure }}</span></p>
                                 {% if values.concert.status == 'canceled' %}
                                     <p class="plan-cancel font-dokyo">Annulé</p>
@@ -44,6 +45,7 @@
                 <div class="col-md-2 hidden-sm hidden-xs col-lieu">
                 {% for heure,values in progLieu %}
                         <div class=" hidden-sm hidden-xs">
+                            <a href="../../../../index.php?page=artist&id={{ values.artiste.id }}">
                             <div class="planning-show show-blue font-default {% if values.showcase.status == 'canceled' %}planning-cancel{%endif%}"><p class="artist">{{ values.artiste.name }}<br/><span class="{% if values.showcase.status == 'canceled' %}cancel-hidden{% endif %}">{{ heure }}</span></p>
                                 {% if values.showcase.status == 'canceled' %}
                                     <p class="plan-cancel font-dokyo">Annulé</p>
@@ -73,6 +75,7 @@
                 <div class="col-md-2 hidden-sm hidden-xs col-lieu">
                     {% for heure, values in progLieu %}
                         <div class=" hidden-sm hidden-xs">
+                            <a href="../../../../index.php?page=artist&id={{ values.artiste.id }}">
                             <div class="planning-show show-blue font-default {% if values.concert.status == 'canceled' %}planning-cancel{%endif%}"><p class="artist">{{ values.artiste.name }}<br/><span class="{% if values.concert.status == 'canceled' %}cancel-hidden{% endif %}">{{ heure }}</span></p>
                                 {% if values.concert.status == 'canceled' %}
                                     <p class="plan-cancel font-dokyo">Annulé</p>
@@ -98,6 +101,7 @@
                             {% for lieu, progLieu in prog.VENDREDI %}
                                 <h4 class="planning-locationSmall font-dokyo">{{ lieu|upper }}</h4>
                                 {% for heure, values in progLieu %}
+                                    <a href="../../../../index.php?page=artist&id={{ values.artiste.id }}">
                                     <p class="planning-showSmall font-circula">
                                         <span class="turquoise font-circula bold
                                             {% if values.concert.status == 'canceled' %}cancel-hidden{% endif %}"
@@ -129,6 +133,7 @@
                         {% for lieu, progLieu in progShow %}
                             <h3 class="planning-locationSmall font-dokyo">{{ lieu|upper }}</h3>
                             {% for heure, values in progLieu %}
+                                <a href="../../../../index.php?page=artist&id={{ values.artiste.id }}">
                                 <p class="planning-showSmall font-circula">
                                         <span class="turquoise font-circula bold
                                             {% if values.showcase.status == 'canceled' %}cancel-hidden{% endif %}"
@@ -159,6 +164,7 @@
                         {% for lieu, progLieu in prog.SAMEDI %}
                             <h3 class="planning-locationSmall font-dokyo">{{ lieu|upper }}</h3>
                             {% for heure, values in progLieu %}
+                                <a href="../../../../index.php?page=artist&id={{ values.artiste.id }}">
                                 <p class="planning-showSmall font-circula">
                                         <span class="turquoise font-circula bold
                                             {% if values.concert.status == 'canceled' %}cancel-hidden{% endif %}"
