--- a/src/Hph/View/front/artist.html.twig
+++ b/src/Hph/View/front/artist.html.twig
@@ -30,7 +30,7 @@
             <div class="col-xs-4">
                 {% for prog in progs %}
                     <div class="content-div upper text-center">
-                        <img src="../web/img/artist/{{ artist.imgArtist }}" class="img-255">
+                        <img src="../../../web/img/artist/{{ artist.imgArtist }}" class="img-255">
                         <div class="text-center">
                             <h2 class="font-circula">{{prog.concert_start |  localizeddate('long', 'none', 'fr')}}</h2>
                             <hr class="hr-small">
@@ -68,7 +68,7 @@
     <div class="visible-xs container">
         <div class="col-xs-12">
             <div class="content-div text-center">
-                <img src="../web/img/artist/{{ artist.imgArtist }}" class="img-255">
+                <img src="../../../web/img/artist/{{ artist.imgArtist }}" class="img-255">
                 <h1 class="font-circula">{{ artist.name }}</h1>
                 <p>{{ artist.bio }}</p>
                 <div class="artiste-tag">
