--- a/src/Hph/View/front/home.html.twig
+++ b/src/Hph/View/front/home.html.twig
@@ -16,7 +16,7 @@
                 <br />
                 <br />
             </div>
-            <h1 class="separator-title font-dokyo">PROGRAMMATION</h1>
+            <h1 class="separator-title font-dokyo"><a href="index.php?page=programmation" class="white font-dokyo">PROGRAMMATION</a></h1>
             <hr class="hr">
             <div class="separator-div text-justify home-progDiv">
                 {%  for artist in artists  %}
