--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Programmation{% endblock %}
-{% block titleMobile %}Artistes{% endblock %}
+{% block titleMobile %}PROG'{% endblock %}
 {% block content %}
     <div class="text-center">
         <div class="dropdown prog-dropdown">
