--- a/src/Hph/View/front/artist.html.twig
+++ b/src/Hph/View/front/artist.html.twig
@@ -109,17 +109,19 @@
                                 </h6>
                             </div>
                         {% endif %}
-                        <hr class="hr">
-                        <div class="artiste-social text-center">
-                            <a href="{{ artist.facebookUrl }}"><i class="fa fa-facebook-square social-logo" aria-hidden="true"></i></a>
-                            <a href="{{ artist.twitterUrl }}"><i class="fa fa-twitter-square social-logo" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-spotify social-logo" aria-hidden="true"></i></a>
-                            <a href="{{ artist.youtubeUrl }}"><i class="fa fa-youtube-square social-logo" aria-hidden="true"></i></a>
-                        </div>
-                        <br />
-                        <iframe width="100%" height="200" src="{{ artist.videoUrl }}" frameborder="0" allowfullscreen></iframe>
+<hr class="hr-min">
                     </div>
                 {% endfor %}
+                <br />
+                <div class="artiste-social text-center">
+                    <a href="{{ artist.facebookUrl }}"><i class="fa fa-facebook-square social-logo" aria-hidden="true"></i></a>
+                    <a href="{{ artist.twitterUrl }}"><i class="fa fa-twitter-square social-logo" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-spotify social-logo" aria-hidden="true"></i></a>
+                    <a href="{{ artist.youtubeUrl }}"><i class="fa fa-youtube-square social-logo" aria-hidden="true"></i></a>
+                </div>
+                <hr class="hr">
+                <br />
+                <iframe width="100%" height="200" src="{{ artist.videoUrl }}" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
